[gd_scene load_steps=9 format=2]

[ext_resource path="res://SimpleUITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/3DPreview.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/ModelExplorer.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
background_color = Color( 0.278431, 0.278431, 0.278431, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="World" id=2]
environment = SubResource( 1 )

[sub_resource type="VisualShaderNodeColorConstant" id=3]
constant = Color( 0.632812, 0.632812, 0.632812, 1 )

[sub_resource type="VisualShader" id=4]
code = "shader_type spatial;
render_mode specular_schlick_ggx, unshaded, ambient_light_disabled;




void vertex() {
// Output:0

}

void fragment() {
// Color:5
	vec3 n_out5p0 = vec3(0.632812, 0.632812, 0.632812);
	float n_out5p1 = 1.000000;

// Output:0
	ALBEDO = n_out5p0;

}

void light() {
// Output:0

}
"
flags/ambient_light_disabled = true
flags/unshaded = true
nodes/fragment/5/node = SubResource( 3 )
nodes/fragment/5/position = Vector2( 52, 149 )
nodes/fragment/connections = PoolIntArray( 5, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerToolbar" type="HBoxContainer" parent="ContainerUI"]
margin_right = 1024.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="ButtonFilters" type="Button" parent="ContainerUI/ContainerToolbar"]
margin_right = 62.0
margin_bottom = 29.0
disabled = true
text = "Filters"

[node name="TextSearch" type="LineEdit" parent="ContainerUI/ContainerToolbar"]
margin_left = 66.0
margin_right = 956.0
margin_bottom = 29.0
size_flags_horizontal = 3
align = 1
editable = false
placeholder_text = "Search word"

[node name="ButtonSearch" type="Button" parent="ContainerUI/ContainerToolbar"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 29.0
disabled = true
text = "Search"

[node name="ContainerSearchResults" type="HSplitContainer" parent="ContainerUI"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ContainerUI/ContainerSearchResults"]
margin_right = 676.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="SearchResults" type="GridContainer" parent="ContainerUI/ContainerSearchResults/ScrollContainer"]
margin_right = 676.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollDetails" type="ScrollContainer" parent="ContainerUI/ContainerSearchResults"]
margin_left = 688.0
margin_right = 1024.0
margin_bottom = 567.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerDetails" type="VBoxContainer" parent="ContainerUI/ContainerSearchResults/ScrollDetails"]
margin_right = 336.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerDetails3DView" type="ViewportContainer" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_right = 336.0
margin_bottom = 429.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Control" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails/ContainerDetails3DView" instance=ExtResource( 2 )]
size = Vector2( 336, 429 )
world = SubResource( 2 )
handle_input_locally = false
render_target_update_mode = 3

[node name="LabelDetailsName" type="Label" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_top = 433.0
margin_right = 336.0
margin_bottom = 452.0
text = "Name"

[node name="LabelDetailsSize" type="Label" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_top = 456.0
margin_right = 336.0
margin_bottom = 475.0
text = "1024.99 MiBi"

[node name="LabelDetailsPolycount" type="Label" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_top = 479.0
margin_right = 336.0
margin_bottom = 498.0
text = "1,785,234 Polygons"

[node name="LabelDetailsLicence" type="Label" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_top = 502.0
margin_right = 336.0
margin_bottom = 521.0
text = "CC-BY"

[node name="LabelDetailsAuthor" type="Label" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_top = 525.0
margin_right = 336.0
margin_bottom = 544.0
text = "Pouiposaurus"

[node name="LabelDetailsDescription" type="Label" parent="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails"]
margin_top = 548.0
margin_right = 336.0
margin_bottom = 567.0
text = "Description"
autowrap = true

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchor_bottom = 1.0
margin_right = 211.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 204.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
material = SubResource( 5 )
margin_right = 197.0
margin_bottom = 429.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClose" type="Button" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 197.0
margin_bottom = 25.0
text = "‚Üê Close"
flat = true

[node name="Label" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 197.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLicence" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 197.0
margin_bottom = 71.0
text = "License"

[node name="OptionsLicenses" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 197.0
margin_bottom = 100.0

[node name="LabelMaxFaceCount" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 197.0
margin_bottom = 177.0
text = "Max faces"

[node name="SpinBoxMaxFaceCount" type="SpinBox" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 197.0
margin_bottom = 210.0
max_value = 1e+08
step = 1000.0
value = 50000.0
rounded = true
allow_greater = true

[node name="LabelPBRType" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 197.0
margin_bottom = 233.0
text = "PBR Type"

[node name="OptionsPBR" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 197.0
margin_bottom = 262.0
items = [ "", null, false, 0, null, "false", null, false, 1, null, "true", null, false, 2, null, "metalness", null, false, 3, null, "specular", null, false, 4, null ]
selected = 0

[node name="LabelCategories" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 197.0
margin_bottom = 285.0
text = "Categories"

[node name="ListCategories" type="ItemList" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 197.0
margin_bottom = 298.0
size_flags_vertical = 3
select_mode = 1
auto_height = true

[node name="LabelSortBy" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 197.0
margin_bottom = 321.0
text = "Sort by"

[node name="OptionsSortBy" type="OptionButton" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 197.0
margin_bottom = 350.0
text = "likeCount"
items = [ "likeCount", null, false, 0, null, "-likeCount", null, false, 1, null, "viewCount", null, false, 2, null, "-viewCount", null, false, 3, null, "publishedAt", null, false, 4, null, "-publishedAt", null, false, 5, null, "processedAt", null, false, 6, null, "-processedAt", null, false, 7, null ]
selected = 0

[node name="LabelMaxFilesizes" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 197.0
margin_bottom = 373.0
text = "Maximum filesizes"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 377.0
margin_right = 197.0
margin_bottom = 429.0

[node name="LabelMaxFilesizesGLTF" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_right = 197.0
margin_bottom = 19.0
text = "GLTF"

[node name="SpinBoxGLTFFilesize" type="SpinBox" parent="PanelContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 197.0
margin_bottom = 52.0
max_value = 2e+09
step = 1000.0
value = 5e+07
rounded = true

[connection signal="pressed" from="ContainerUI/ContainerToolbar/ButtonFilters" to="." method="_on_ButtonFilters_pressed"]
[connection signal="text_entered" from="ContainerUI/ContainerToolbar/TextSearch" to="." method="_on_TextSearch_text_entered"]
[connection signal="pressed" from="ContainerUI/ContainerToolbar/ButtonSearch" to="." method="_on_ButtonSearch_pressed"]
[connection signal="resized" from="ContainerUI/ContainerSearchResults/ScrollContainer/SearchResults" to="." method="_on_SearchResults_resized"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/VBoxContainer/ButtonClose" to="." method="_on_ButtonClose_pressed"]

[editable path="ContainerUI/ContainerSearchResults/ScrollDetails/ContainerDetails/ContainerDetails3DView/Control"]
